--- a/Web.config
+++ b/Web.config
@@ -11,5 +11,9 @@
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
+    
+<connectionStrings>
+  <add name="cnx1" connectionString="Data Source=HECTOR\INSTANCIA1;Initial Catalog=Optica;Integrated Security=False;User ID=sa;Password=1234;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+</connectionStrings>
 
 </configuration>
